--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,29 @@
 annotated-types==0.6.0
-anyio==3.7.0
+anyio==3.7.1
 certifi==2023.5.7
 click==8.1.3
 exceptiongroup==1.1.1
-fastapi==0.97.0
+fastapi==0.104.1
+greenlet==3.0.1
 h11==0.14.0
 httpcore==0.17.2
 httpx==0.24.1
 idna==3.4
 iniconfig==2.0.0
-mysql-connector-python==8.0.33
+# mysql-connector==2.2.9
+# mysql-connector-python==8.0.33
 packaging==23.1
 pluggy==1.0.0
 protobuf==3.20.3
 pydantic==2.4.2
 pydantic-settings==2.0.3
 pydantic_core==2.10.1
+PyMySQL==1.1.0
 pytest==7.3.2
 python-dotenv==1.0.0
 sniffio==1.3.0
+SQLAlchemy==2.0.23
 starlette==0.27.0
 tomli==2.0.1
-typing_extensions==4.6.3
+typing_extensions==4.8.0
 uvicorn==0.22.0
