--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 annotated-types==0.6.0
 anyio==3.7.1
 certifi==2023.5.7
+cffi==1.16.0
 click==8.1.3
+cryptography==41.0.7
 exceptiongroup==1.1.1
 fastapi==0.104.1
 greenlet==3.0.1
@@ -10,11 +12,10 @@ httpcore==0.17.2
 httpx==0.24.1
 idna==3.4
 iniconfig==2.0.0
-# mysql-connector==2.2.9
-# mysql-connector-python==8.0.33
 packaging==23.1
 pluggy==1.0.0
 protobuf==3.20.3
+pycparser==2.21
 pydantic==2.4.2
 pydantic-settings==2.0.3
 pydantic_core==2.10.1
